<resources>
    <string name="app_name">MercadoLibre</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">"Username"</string>
    <string name="prompt_password">"Password"</string>
    <string name="welcome">"Welcome !"</string>
    <string name="login_failed">"The username or password is incorrect"</string>
    <string name="btnEnter">"Login"</string>
    <string name="aboutus">"About us"</string>
    <string name="logOut">"Log out"</string>
    <string name="aboutML">Mercado Libre is an Argentine multinational company dedicated to electronic commerce in Latin America, with headquarters in Montevideo, Uruguay.</string>
    <string name="back">"Back"</string>
    <string name="name">"Name:"</string>
    <string name="email">"E-mail:"</string>
    <string name="phone">"Phone:"</string>
    <string name="send">"Send"</string>
    <string name="call">"Call"</string>
    <string name="programmerdata">"Programmer data"</string>
</resources>